* Num packages: new structure, reordering.
  - Separate rationals (requiring the valies NaN, +infty, -infty) and reals.
  - Drop the "Rational" and "Real" class prefixes.
  - Double/Single also renamed to DoublePrecision/SinglePrecision.
* CurvePwAffineUtilsDispatch was not a dispatcher but an utils class:
  - Renamed to CurvePwAffineUtils.
  - Made it an abstract class. 

v2.4.0beta2 "Chimera" (2017-Aug-17)
-----------------------------------
* Interface and Dispatcher naming: interfaces do not have a suffix, dispatchers now suffixed with "Dispatch".
  - CurvePwAffineFactory renamed to CurvePwAffineFactoryDispatch 
  - CurvePwAffineFactoryInterface renamed to CurvePwAffineFactory
  - CurvePwAffineUtils renamed to CurvePwAffineUtilsDispatch
  - LinearSegmentFactory renamed to LinearSegmentFactoryDispatch
  - NumFactory renamed to NumFactoryDispatch
  - NumFactoryInterface renamed to NumFactory
  - NumUtils renamed to NumUtilsDispatch
  - NumUtilsInterface renamed to NumUtils
* Dispatch classes are all abstract now.
* Renamed OperatorInputChecks to MinPlusInputChecks.
* Made LinearSegmentUtils an abstract class (it only provides static methods). 
* Reworked CalculatorConfig.java to singleton pattern (improves tests run time considerably).

v2.4.0beta1 "Chimera" (2017-Aug-02)
-----------------------------------
* An alternative curve backend for the DiscoDNC analyses:
  This release wraps the MPA RTC Toolbox's curve implementation to be used with the DiscoDNC. It continues the work presented at ECRTS 2017:
     Philipp Schon and Steffen Bondorf, Towards Unified Tool Support for Real-time Calculus & Deterministic Network Calculus.
  The required MPA RTC library is available at www.mpa.ethz.ch/Rtctoolbox/
* Package naming now complies with the Java rules. Our domain disco.cs.uni-kl.de translates to the package prefix de.uni_kl.cs.disco. 

v2.3.5 "Centaur" (2017-Jun-25)
------------------------------
* Network.java: 
  - Reduced amount of arrival curve copies.